[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-queue"
version = "0.1.1"
authors = [
  { name="Fidel Chukwunyere", email="fidelchukwunyere@gmail.com" },
]
description = "Zero-infra background jobs for Python. Runs via daemon threads and piggybacks on your existing database."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "sqlalchemy>=1.4.0,<3.0.0"
]

[project.urls]
"Homepage" = "https://github.com/fidel-c/nano-queue"
"Bug Tracker" = "https://github.com/fidel-c/nano-queue/issues"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
